--- a/apache2-installation.yml
+++ b/apache2-installation.yml
@@ -1,11 +1,11 @@
 ---
 - hosts: localhost
-  sudo: yes
+  #sudo: yes
   tasks:
   - name: install apache2
     apt: name=apache2 update_cache=yes state=latest
     notify:
-    - restart apache
+    - restart apache2
       #  - name: ensure apache is running (and enable it at boot)
       # service: name=apache2 state=started enabled=yes
   handlers:
